--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "1.1.2",
     "axios-mock-adapter": "^1.21.2",
     "chart.js": "^3.9.1",
+    "jquery": "^3.6.3",
     "jwt-decode": "^3.1.2",
     "pinia": "^2.0.24",
     "prismjs": "^1.29.0",
@@ -50,6 +51,7 @@
     "@iconify/tools": "^2.1.0",
     "@iconify/vue": "^4.0.0",
     "@intlify/vite-plugin-vue-i18n": "^5.0.1",
+    "@types/jquery": "^3.5.16",
     "@types/node": "^18.7.18",
     "@types/webfontloader": "^1.6.34",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
