--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@floating-ui/dom": "1.0.4",
     "@ssthouse/vue3-tree-chart": "^0.2.6",
     "@tabler/icons": "^1.97.0",
+    "@vueup/vue-quill": "^1.2.0",
     "@vueuse/core": "^9.5.0",
     "@vueuse/math": "^9.5.0",
     "apexcharts-clevision": "^3.28.5",
@@ -25,6 +26,8 @@
     "pinia": "^2.0.24",
     "prismjs": "^1.29.0",
     "query-string": "^8.1.0",
+    "quill-blot-formatter": "^1.0.5",
+    "quill-image-uploader": "^1.3.0",
     "roboto-fontface": "^0.10.0",
     "sass": "^1.56.1",
     "unplugin-vue-define-options": "^0.12.8",
