--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,15 @@
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
+        "arcanedev/log-viewer": "^9.0",
         "guzzlehttp/guzzle": "^7.2",
+        "illuminatech/multipart-middleware": "^1.1",
+        "intervention/image": "^2.7",
         "kalnoy/nestedset": "^6.0",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.1",
         "laravel/tinker": "^2.7",
-        "opcodesio/log-viewer": "^2.3"
+        "predis/predis": "^2.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
@@ -27,7 +30,10 @@
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
-        }
+        },
+        "files": [
+            "app/Helper/helpers.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
