--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "unplugin-vue-define-options": "^0.12.8",
     "vue": "^3.2.45",
     "vue-chartjs": "^4.1.1",
+    "vue-credit-card-validation": "^1.0.5",
     "vue-flatpickr-component": "11.0.1",
     "vue-i18n": "^9.2.2",
     "vue-prism-component": "^2.0.0",
@@ -60,6 +61,7 @@
     "@iconify/vue": "^4.0.0",
     "@intlify/vite-plugin-vue-i18n": "^5.0.1",
     "@types/jquery": "^3.5.16",
+    "@types/lodash": "^4.14.195",
     "@types/node": "^18.7.18",
     "@types/webfontloader": "^1.6.34",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
