--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "1.1.2",
     "axios-mock-adapter": "^1.21.2",
     "chart.js": "^3.9.1",
+    "crypto-js": "^4.1.1",
     "html2canvas": "^1.4.1",
     "jquery": "^3.6.3",
     "jwt-decode": "^3.1.2",
@@ -68,6 +69,7 @@
     "@typescript-eslint/parser": "^5.43.0",
     "@vitejs/plugin-vue": "^3.1.0",
     "@vitejs/plugin-vue-jsx": "^2.1.1",
+    "dotenv": "^16.3.1",
     "eslint": "^8.28.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-import-resolver-typescript": "^3.5.1",
