--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "quill-image-uploader": "^1.3.0",
     "roboto-fontface": "^0.10.0",
     "sass": "^1.56.1",
+    "swiper": "^8.4.7",
     "unplugin-vue-define-options": "^0.12.8",
     "vue": "^3.2.45",
+    "vue-awesome-swiper": "^5.0.1",
     "vue-chartjs": "^4.1.1",
     "vue-credit-card-validation": "^1.0.5",
     "vue-flatpickr-component": "11.0.1",
