--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,5 +29,6 @@ jobs:
         host: 211.45.163.74
         username: forge
         key: ${{ secrets.SCP_KEY }}
+        passphrase: ${{ secrets.PASSPHRASE }}
         source: "public/build"
         target: "forge@211.45.163.74:/home/forge/team.payvery.kr"
