--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,12 +23,20 @@ jobs:
     - name: Build
       run: yarn build
 
+    - name: Decode SSH key
+      run: echo "${{ secrets.SCP_KEY_BASE64 }}" | base64 -d > id_rsa
+      shell: bash
+
+    - name: Set permissions for SSH key
+      run: chmod 600 id_rsa
+      shell: bash
+
     - name: Deploy to server
       uses: appleboy/scp-action@master
       with:
         host: 211.45.163.74
         username: forge
-        key: ${{ secrets.SCP_KEY }}
+        key: ${{ steps.decode_key.outputs.key }}
         passphrase: ${{ secrets.PASSPHRASE }}
         source: "public/build"
         target: "forge@211.45.163.74:/home/forge/team.payvery.kr"
