--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
       run: yarn build
 
     - name: Decode SSH key
-      run: echo "${{ secrets.SCP_KEY_BASE64 }}" | base64 -d > id_rsa
+      run: echo "${{ secrets.SCP_KEY }}" | base64 -d > id_rsa
       shell: bash
 
     - name: Set permissions for SSH key
