--- a/resources/ts/@iconify/tsconfig.json
+++ b/resources/ts/@iconify/tsconfig.json
@@ -10,6 +10,7 @@
         "moduleResolution": "node",
         "esModuleInterop": true,
         "forceConsistentCasingInFileNames": true,
+        "importsNotUsedAsValues": "error"
     },
     "exclude": [
         "./*.js"
