--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "vue-i18n": "9.2.2",
     "vue-prism-component": "^2.0.0",
     "vue-router": "4.1.6",
+    "vue-virtual-scroller": "^2.0.0-beta.8",
     "vue3-apexcharts": "1.4.1",
     "vue3-perfect-scrollbar": "1.6.1",
     "vuetify": "3.2.1",
@@ -89,8 +90,8 @@
     "unplugin-auto-import": "0.15.3",
     "unplugin-vue-components": "0.24.1",
     "vite": "4.3.3",
-    "vite-plugin-pwa": "^0.16.4",
     "vite-plugin-pages": "0.29.0",
+    "vite-plugin-pwa": "^0.16.4",
     "vite-plugin-vue-layouts": "0.8.0",
     "vite-plugin-vuetify": "1.0.2",
     "vue-shepherd": "3.0.0",
