--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@casl/vue": "2.2.1",
     "@floating-ui/dom": "1.2.7",
     "@tabler/icons": "2.17.0",
+    "@vuepic/vue-datepicker": "^6.1.0",
     "@vueup/vue-quill": "^1.2.0",
     "@vueuse/core": "10.1.0",
     "@vueuse/math": "10.1.0",
