--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@casl/ability": "6.5.0",
     "@casl/vue": "2.2.1",
+    "@devindex/vue-mask": "^2.0.3",
     "@floating-ui/dom": "1.2.7",
     "@tabler/icons": "2.17.0",
     "@vuepic/vue-datepicker": "^6.1.0",
